--- a/requirement/CMakeLists.txt
+++ b/requirement/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
+
 project(requirement)
 
 set(CMAKE_CXX_STANDARD 11)
@@ -9,7 +10,7 @@ include_directories(/usr/local/include/pcapplusplus)
 
 link_directories(/usr/local/lib)
 
-add_executable(main ${SRC_LIST})
+add_executable("${PROJECT_NAME}" ${SRC_LIST})
 
-target_link_libraries(main Pcap++ Packet++ Common++ pcap)
+target_link_libraries("${PROJECT_NAME}" Pcap++ Packet++ Common++ pcap)
 
