--- a/config.conf
+++ b/config.conf
@@ -2,4 +2,15 @@
 network_interface_ip = 192.168.1.6
 
 # the number of IO threads.
-num_threads_proc_io = 50
+num_threads_proc_io = 16
+
+# use filter
+use_filter = true
+
+# display low layers info
+display_low_layers_info = false     # for debug 
+
+debug_http = false
+
+debug_dns = true
+
